manifests/base/localstack/service.yaml
# localstack-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: localstack
spec:
  selector:
    app: localstack
  ports:
    - protocol: TCP
      port: 4566
      targetPort: 4566
  type: LoadBalancer # Or NodePort/LoadBalancer if external access is needed
